rugby academy bijgewerkt

--- a/Website/Basis Website [SBR Viewer]/rugbyacademie.html
+++ b/Website/Basis Website [SBR Viewer]/rugbyacademie.html
@@ -68,11 +68,26 @@
                     <div class="col-md-2 nav-menu navbar-intern">
                         <ul class="nav navbar-nav">
                             <li class="page-scroll">
-                                <a href="#over">Over</a>
+                                <a href="#over">'t rijks</a>
                             </li>
+                                <li class="page-scroll">
+                                    <a href="#over" class="sub">over</a>
+                                </li>
+                                <li class="page-scroll">
+                                    <a href="#toegangsvoorwaarden" class="sub">Voorwaarden</a>
+                                </li>
                             <li class="page-scroll">
-                                <a href="#rsg">RSG</a>
+                                <a href="#loot">LOOT</a>
                             </li>
+                                <li class="page-scroll">
+                                    <a href="#loot" class="sub">over</a>
+                                </li>
+                                <li class="page-scroll">
+                                    <a href="#faciliteiten" class="sub">faciliteiten</a>
+                                </li>
+                                <li class="page-scroll"+>
+                                    <a href="#voorwie" class="sub">voor wie</a>
+                                </li>
                             <li class="page-scroll">
                                 <a href="#contact">Contact</a>
                             </li>
@@ -109,34 +124,115 @@
             <div class="section-body">
                 <div class="content">
                     <div class="section-header">
-                        <h2>Algemene informatie</h2>
+                        <h2>Studeren en topsport op 't Rijks </h2>
                         <div class="divider-grey"></div>
                     </div>
                     <div class="section-container">
                         <div class="vert-center">
-                            Verticale centrering
+                            <p class="text-center">
+                                Wil je goed kunnen studeren voor je latere carrière en ook vaak je favoriete sport rugby beoefenen? Op 't Rijks is dat mogelijk! Wij bieden een opleiding op MAVO-, HAVO- of VWO-niveau en extra trainingen onder schooltijd.
+                            </p>
+                            <div class="collapse-group">
+                                <p class="collapse text-center">
+                                    Momenteel zijn er op onze school topsportvriendelijke klassen voor basketbal, tennis, voetbal (meisjes), atletiek en nieuw voor rugby: ‘de Rugby Academy’. Deze klassen zijn wij gestart om talenten te ontwikkelen, zodat zij zich bij het allerhoogste niveau, als Topsport Talent, kunnen aansluiten.
+                                </p>
+                                <p class="collapse text-center">
+                                    Bij deelname aan de Rugby Academy krijg je al meteen een topsport status.
+                                </p>
+                                <p class="collapse text-center">
+                                    Alle trainingen zijn aanvullend op de gewone trainingen die een leerling al bij een sportclub of sportbond volgt. Per week zijn er minimaal twee blokken van twee lesuren training onder schooltijd. De trainingen worden gegeven door bonds-gekwalificeerde trainers in deze sport. Zo willen we je helpen beter te worden in je favoriete sport. Tijdens wedstrijden tegen andere scholen en bij je sportvereniging kun je laten zien wat je geleerd hebt. Wil jij jezelf verder ontwikkelen dan kun je geplaatst worden de Rugby Academy!
+                                </p>
+                                <a class="btn btn-default btn-collapse" href="#">
+                                    Lees meer
+                                </a>
+                            </div>
                         </div>
-
                     </div>
+
                 </div>
             </div>
         </section>
-         <section id="rsg" class="section RSG">
+
+        <section id="toegangsvoorwaarden" class="section voorwaarden">
             <div class="section-body">
                 <div class="content">
                     <div class="section-header">
-                        <h2>RSG ’t Rijks</h2>
+                        <h2>Voorwaarden tot toelating</h2>
                         <div class="divider-grey"></div>
                     </div>
                     <div class="section-container">
                         <div class="vert-center">
-                            
+                            <p class="text-center">
+                                We verwachten dat je lid bent van een rugbyvereniging. Wij hebben geen voorkeur voor een bepaalde vereniging, maar je moet wel talent hebben. Toelating tot de Topsportvriendelijke klassen gebeurt via selectie. Deze selectie wordt gedaan door de sportbond of gekwalificeerde trainers. Er wordt gekeken of iemand voldoende niveau of mogelijkheden heeft om deze trainingen te volgen. Op de informatieavonden kun je kennismaken met de school in het algemeen. 
+                            </p>
+                            <p class="text-center">
+                                Bij deelname aan dit programma  wordt een eigen bijdrage gevraagd van € 160,- per jaar.
+                            </p>
                         </div>
 
                     </div>
                 </div>
             </div>
         </section>
+
+        
+         <section id="loot" class="section loot">
+            <div class="section-body">
+                <div class="content">
+                    <div class="section-header">
+                        <h2>Wat betekent LOOT? </h2>
+                        <div class="divider-grey"></div>
+                    </div>
+                    <div class="section-container">
+                        <div class="vert-center">
+                            <p class="text-center">
+                                LOOT staat voor Landelijke Organisatie Onderwijs en Topsport. Er zijn momenteel een 30-tal Topsport Talentscholen (LOOT-scholen) in Nederland. Deze scholen mogen van het Ministerie van Onderwijs, Cultuur en Wetenschap speciale faciliteiten geven aan leerlingen die talentvol zijn in sport, zodat zij hun studie en sport op een goede manier met elkaar kunnen combineren. Andere scholen mogen dit niet.
+                            </p>
+                        </div>
+
+                    </div>
+                </div>
+            </div>
+        </section>
+
+        <section id="faciliteiten" class="section faciliteiten">
+            <div class="section-body">
+                <div class="content">
+                    <div class="section-header">
+                        <h2>Welke faciliteiten krijgt een LOOT-leerling?</h2>
+                        <div class="divider-grey"></div>
+                    </div>
+                    <div class="section-container">
+                        <div class="vert-center">
+                            <p class="text-center">
+                                Er zijn verschillende mogelijkheden. Eén hiervan is vrijstelling van bepaalde uren zodat je dan je huiswerk kunt maken of kunt gaan trainen onder schooltijd. Een andere mogelijkheid is een aangepast rooster om uitgevallen uren, indien nodig weer in te halen. Ook vrijaf voor deelname aan wedstrijden, toernooien en trainingsstages hoort onder voorwaarden tot de mogelijkheden. Het kan zelfs zover gaan dat je vrijstelling van eindexamenvakken krijgt en de mogelijkheid om dit eindexamen te spreiden over twee jaar. Bij problemen zijn er steunlessen voor je en ook de ondersteuning door een LOOT-begeleider hoort er standaard bij. Verder is er een aparte studieruimte met toezicht.
+                            </p>
+                        </div>
+
+                    </div>
+                </div>
+            </div>
+        </section>
+
+        <section id="voorwie" class="section voorwie">
+            <div class="section-body">
+                <div class="content">
+                    <div class="section-header">
+                        <h2>Voor wie is LOOT?</h2>
+                        <div class="divider-grey"></div>
+                    </div>
+                    <div class="section-container">
+                        <div class="vert-center">
+                            <p class="text-center">
+                                Wil je voor LOOT-faciliteiten in aanmerking komen dan dien je een status te hebben. Jouw sportbond bepaalt in samenspraak met het NOC/NSF wie er in jouw sport als talent wordt bestempeld. Deze talenten staan in een grote landelijke database. Als je als Belofte, Nationaal Talent of Internationaal Talent wordt gekwalificeerd dan krijg je op RSG 't Rijks een Topsport Talentstatus met de daarbij behorende faciliteiten.
+                            </p>
+                        </div>
+
+                    </div>
+                </div>
+            </div>
+        </section>
+
         <section id="contact" class="section contact">
             <div class="section-body">
                 <div class="content">
