optimalisatie layout index+rtc+rugbyacademy+selecties

--- a/Website/Basis Website [SBR Viewer]/rtc.html
+++ b/Website/Basis Website [SBR Viewer]/rtc.html
@@ -115,7 +115,7 @@
                         <h1>Wat is RTC?</h1>
                         <div class="divider-grey"></div>
                     </div>
-                    <div class="col-lg-8">
+                    <div class="col-lg-8 col-lg-offset-2">
                         <p>
                             Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor. Aenean massa. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Donec quam felis, ultricies nec, pellentesque eu, pretium quis, sem. Nulla consequat massa quis enim. Donec pede justo, fringilla vel, aliquet nec, vulputate eget, arcu. In enim justo, rhoncus ut, imperdiet a, venenatis vitae, justo. Nullam dictum felis eu pede mollis pretium. Integer tincidunt. Cras dapibus. Vivamus elementum semper nisi. Aenean vulputate eleifend tellus. Aenean leo ligula, porttitor eu, consequat vitae, eleifend ac, enim. Aliquam lorem ante, dapibus in, viverra quis, feugiat a, tellus. Phasellus viverra nulla ut metus varius laoreet. Quisque rutrum. Aenean imperdiet. Etiam ultricies nisi vel augue. Curabitur ullamcorper ultricies nisi. Nam eget dui.
                         </p>
@@ -140,33 +140,35 @@
                         <div class="divider-grey"></div>
                     </div>
                     <div class="section-container">
-                        <p>
-                            Voor de deelnemers is een platform gerealiseerd om stappen te maken. De trainingen die worden verzorgd sluiten naadloos aan op het bereiken van hogere niveau's. Opleidingsprogramma's houden rekening met de verschillen in leeftijd en ontwikkelfases van rugbyers. Belangrijke motieven daarbij zijn zelfontplooing, plezier beleven en het gevoel hebben zinvol bezig te zijn met en voor anderen en zichzelf. Opleiding-/ en ondersteuningsprogramma's worden door tussenkomst van ZeBra (Technisch Hart) afgestemd met de NRB, betrokken verenigingen en organisaties.
-                        </p>
-                        <h3>Seizoen 2015 – 2016</h3>
-                        <ul>
-                            <li>RTC 1 op zondag ? van 09.00 – 13.00 sportpark Vierhoeven</li>
-                            <li>RTC 2 op zondag ? van 09.00 – 13.00 sportpark Vierhoeven</li>
-                            <li>RTC 3 op zondag ? van 09.00 – 13.00 sportpark Vierhoeven</li>
-                            <li>RTC 4 op zaterdag ? 10.00 – 15.00 NRCA</li>
-                        </ul>            
-                        <p>
-                            24 februari 2016 van 13.00 – 17.00 ZeBra Rugby Talentendag op RSG ’t Rijks in Bergen op Zoom met medewerking van Internationale en nationale toppers!
-                        </p>
-                        <p>
-                            Dzv Talentencentrum Zuidwest Nederland bij Aleco:
-                            Rugby skills 1x per week. Voor rugbyers in de leeftijdsgroep U 10 – U15. 
-                            
-                        </p>
-                        <p>
-                            Maandagavond van 18.30 – 20.00
-                        </p>
-                        <p>
-                            Strenght-, conditioning-, combat- en winnerstrainingen 3x per week. Alleen op uitnodiging van ZeBra Technisch Hart.
-                        </p>
-                        <p>
-                            Op maandag ( 07.45 – 09.15 of van 16.00 – 20.00), woendag (16.00 – 17.30) en vrijdag (16.00 – 17.30).
-                        </p>
+                        <div class="col-lg-8 col-lg-offset-2">
+                            <p>
+                                Voor de deelnemers is een platform gerealiseerd om stappen te maken. De trainingen die worden verzorgd sluiten naadloos aan op het bereiken van hogere niveau's. Opleidingsprogramma's houden rekening met de verschillen in leeftijd en ontwikkelfases van rugbyers. Belangrijke motieven daarbij zijn zelfontplooing, plezier beleven en het gevoel hebben zinvol bezig te zijn met en voor anderen en zichzelf. Opleiding-/ en ondersteuningsprogramma's worden door tussenkomst van ZeBra (Technisch Hart) afgestemd met de NRB, betrokken verenigingen en organisaties.
+                            </p>
+                            <h3>Seizoen 2015 – 2016</h3>
+                            <ul>
+                                <li>RTC 1 op zondag ? van 09.00 – 13.00 sportpark Vierhoeven</li>
+                                <li>RTC 2 op zondag ? van 09.00 – 13.00 sportpark Vierhoeven</li>
+                                <li>RTC 3 op zondag ? van 09.00 – 13.00 sportpark Vierhoeven</li>
+                                <li>RTC 4 op zaterdag ? 10.00 – 15.00 NRCA</li>
+                            </ul>            
+                            <p>
+                                24 februari 2016 van 13.00 – 17.00 ZeBra Rugby Talentendag op RSG ’t Rijks in Bergen op Zoom met medewerking van Internationale en nationale toppers!
+                            </p>
+                            <p>
+                                Dzv Talentencentrum Zuidwest Nederland bij Aleco:
+                                Rugby skills 1x per week. Voor rugbyers in de leeftijdsgroep U 10 – U15. 
+                                
+                            </p>
+                            <p>
+                                Maandagavond van 18.30 – 20.00
+                            </p>
+                            <p>
+                                Strenght-, conditioning-, combat- en winnerstrainingen 3x per week. Alleen op uitnodiging van ZeBra Technisch Hart.
+                            </p>
+                            <p>
+                                Op maandag ( 07.45 – 09.15 of van 16.00 – 20.00), woendag (16.00 – 17.30) en vrijdag (16.00 – 17.30).
+                            </p>
+                        </div>
                     </div>
                 </div>
             </div>
