--- a/Website/Basis Website [SBR Viewer]/selecties.html
+++ b/Website/Basis Website [SBR Viewer]/selecties.html
@@ -132,7 +132,7 @@
                 <div class="section-header">
                     <h2>Zebra spelers in oranje</h2>
                     <div class="divider-grey"></div>
-                    <div class="table">
+                    <div class="col-lg-8 col-lg-offset-2">
                         <p class="text-center">Door middel van de onderstaande knop kunt u het team schema downloaden.</p>
 
                         <a href="#" class="btn btn-primary btn-lg active" role="button" target="blank">Oranjespelers</a>
@@ -153,7 +153,7 @@
                 <div class="section-header">
                     <h2>Zebra Heren U16 &amp; U17</h2>
                     <div class="divider-grey"></div>
-                    <div class="table">
+                    <div class="col-lg-8 col-lg-offset-2">
                         <table class="table">
                             <tr>
                                 <th class="info" colspan="2">Begeleiding</th>
@@ -194,7 +194,7 @@
                 <div class="section-header">
                     <h2>Zebra Heren U14 &amp; U15</h2>
                     <div class="divider-grey"></div>
-                    <div class="table">
+                    <div class="col-lg-8 col-lg-offset-2">
                         <table class="table">
                             <tr>
                                 <th class="info" colspan="2">Begeleiding</th>
@@ -235,7 +235,7 @@
                 <div class="section-header">
                     <h2>Zebra Heren U12 &amp; U13</h2>
                     <div class="divider-grey"></div>
-                    <div class="table">
+                    <div class="col-lg-8 col-lg-offset-2">
                         <table class="table">
                             <tr>
                                 <th class="info" colspan="2">Begeleiding</th>
@@ -276,7 +276,7 @@
                 <div class="section-header">
                     <h2>Zebra Heren U10 &amp; U11</h2>
                     <div class="divider-grey"></div>
-                    <div class="table">
+                    <div class="col-lg-8 col-lg-offset-2">
                         <table class="table">
                             <tr>
                                 <th class="info" colspan="2">Begeleiding</th>
@@ -317,7 +317,7 @@
                 <div class="section-header">
                     <h2>Zebra Dames U15 &amp; U18</h2>
                     <div class="divider-grey"></div>
-                    <div class="table">
+                    <div class="col-lg-8 col-lg-offset-2">
                         <table class="table">
                             <tr>
                                 <th class="info" colspan="2">Begeleiding</th>
