--- a/Website/Basis Website [SBR Viewer]/index.html
+++ b/Website/Basis Website [SBR Viewer]/index.html
@@ -167,75 +167,75 @@
                         </h2>
                         <div class="divider-grey"></div>
 
-                        <div class="table">
+                        <div class=" col-lg-8 col-lg-offset-2">
                             <h3>Programma seizoen 2015 – 2016</h3>
                             <table class="table">
                                 <tr>
                                     <td class="info" colspan="2"><strong>6 september</strong></td>
                                 </tr>
                                     <tr>
-                                        <td>09.30 -  13.00</td>
+                                        <td>09.30 - 13.00</td>
                                         <td>
                                             RRD 1 sportpark Vierhoeven voor U12 t/m U15
                                             <br/>Programma U10 en U11
                                         </td>
                                     </tr>
                                     <tr>
-                                        <td> 09.30 – 12.00</td>
+                                        <td> 09.30 - 12.00</td>
                                         <td>Programma U16 en U17</td>
                                     </tr>
                                     <tr>
-                                        <td> 13.00 – 14.30</td>
+                                        <td> 13.00 - 14.30</td>
                                         <td>Wedstrijd ZeBra U 16 en U17 – RCE/PV U16 en U17</td>
                                     </tr>
                                 <tr>
                                     <td class="info" colspan="2"><strong>8 november</strong></td>
                                 </tr>
                                     <tr>
-                                        <td>09.30 – 13.00</td>
+                                        <td>09.30 - 13.00</td>
                                         <td>
                                             RRD 2 sportpark Vierhoeven voor U12 t/m U15
                                             <br/>Programma U10 en U11
                                         </td>
                                     </tr>
                                     <tr>
-                                        <td>09.30 – 12.00</td>
+                                        <td>09.30 - 12.00</td>
                                         <td>Programma U16 en U17</td>
                                     </tr>
                                     <tr>
-                                        <td>13.00 – 14.15</td>
+                                        <td>13.00 - 14.15</td>
                                         <td>Wedstrijd ZeBra U 16 en U17</td>
                                     </tr>
                                 <tr>
                                     <td class="info" colspan="2"><strong>10 januari</strong></td>
                                 </tr>
                                     <tr>
-                                        <td>09.30 – 13.00</td>
+                                        <td>09.30 - 13.00</td>
                                         <td>
                                             RRD  3 sportpark Voerhoeven voor U12 t/m U15
                                             <br/>Programma U10 en U11
                                         </td>
                                     </tr>
                                     <tr>
-                                        <td>09.30 – 12.00</td>
+                                        <td>09.30 - 12.00</td>
                                         <td>Programma U16 en U17</td>
                                     </tr>
                                     <tr>
-                                        <td> 13.00 – 14.15</td>
+                                        <td> 13.00 - 14.15</td>
                                         <td>Wedstrijd ZeBra U 16 en U17 </td>
                                     </tr>
                                 <tr>
                                     <td class="info" colspan="2"><strong>9 april</strong></td>
                                 </tr>
                                     <tr>
-                                        <td>09.00 – 15.00</td>
+                                        <td>09.00 - 15.00</td>
                                         <td>RRD 4 in Amsterdam (NRCA) voor U12 t/m U15</td>
                                     </tr>
                                 <tr>
                                     <td class="info" colspan="2"><strong>15 april</strong></td>
                                 </tr>
                                     <tr>
-                                        <td>15.00 – 20.00</td>
+                                        <td>15.00 - 20.00</td>
                                         <td>Regionaal Scholen Rugby Festival sportpark Vierhoeven Roosendaal</td>
                                     </tr>
                             </table>
