--- a/Website/Basis Website [SBR Viewer]/rugbyacademie.html
+++ b/Website/Basis Website [SBR Viewer]/rugbyacademie.html
@@ -128,7 +128,7 @@
                         <div class="divider-grey"></div>
                     </div>
                     <div class="section-container">
-                        <div class="vert-center">
+                        <div class="vert-center col-lg-8 col-lg-offset-2">
                             <p class="text-center">
                                 Wil je goed kunnen studeren voor je latere carrière en ook vaak je favoriete sport rugby beoefenen? Op 't Rijks is dat mogelijk! Wij bieden een opleiding op MAVO-, HAVO- of VWO-niveau en extra trainingen onder schooltijd.
                             </p>
@@ -161,7 +161,7 @@
                         <div class="divider-grey"></div>
                     </div>
                     <div class="section-container">
-                        <div class="vert-center">
+                        <div class="vert-center col-lg-8 col-lg-offset-2">
                             <p class="text-center">
                                 We verwachten dat je lid bent van een rugbyvereniging. Wij hebben geen voorkeur voor een bepaalde vereniging, maar je moet wel talent hebben. Toelating tot de Topsportvriendelijke klassen gebeurt via selectie. Deze selectie wordt gedaan door de sportbond of gekwalificeerde trainers. Er wordt gekeken of iemand voldoende niveau of mogelijkheden heeft om deze trainingen te volgen. Op de informatieavonden kun je kennismaken met de school in het algemeen. 
                             </p>
@@ -184,7 +184,7 @@
                         <div class="divider-grey"></div>
                     </div>
                     <div class="section-container">
-                        <div class="vert-center">
+                        <div class="vert-center col-lg-8 col-lg-offset-2">
                             <p class="text-center">
                                 LOOT staat voor Landelijke Organisatie Onderwijs en Topsport. Er zijn momenteel een 30-tal Topsport Talentscholen (LOOT-scholen) in Nederland. Deze scholen mogen van het Ministerie van Onderwijs, Cultuur en Wetenschap speciale faciliteiten geven aan leerlingen die talentvol zijn in sport, zodat zij hun studie en sport op een goede manier met elkaar kunnen combineren. Andere scholen mogen dit niet.
                             </p>
@@ -203,7 +203,7 @@
                         <div class="divider-grey"></div>
                     </div>
                     <div class="section-container">
-                        <div class="vert-center">
+                        <div class="vert-center col-lg-8 col-lg-offset-2">
                             <p class="text-center">
                                 Er zijn verschillende mogelijkheden. Eén hiervan is vrijstelling van bepaalde uren zodat je dan je huiswerk kunt maken of kunt gaan trainen onder schooltijd. Een andere mogelijkheid is een aangepast rooster om uitgevallen uren, indien nodig weer in te halen. Ook vrijaf voor deelname aan wedstrijden, toernooien en trainingsstages hoort onder voorwaarden tot de mogelijkheden. Het kan zelfs zover gaan dat je vrijstelling van eindexamenvakken krijgt en de mogelijkheid om dit eindexamen te spreiden over twee jaar. Bij problemen zijn er steunlessen voor je en ook de ondersteuning door een LOOT-begeleider hoort er standaard bij. Verder is er een aparte studieruimte met toezicht.
                             </p>
@@ -222,7 +222,7 @@
                         <div class="divider-grey"></div>
                     </div>
                     <div class="section-container">
-                        <div class="vert-center">
+                        <div class="vert-center col-lg-8 col-lg-offset-2">
                             <p class="text-center">
                                 Wil je voor LOOT-faciliteiten in aanmerking komen dan dien je een status te hebben. Jouw sportbond bepaalt in samenspraak met het NOC/NSF wie er in jouw sport als talent wordt bestempeld. Deze talenten staan in een grote landelijke database. Als je als Belofte, Nationaal Talent of Internationaal Talent wordt gekwalificeerd dan krijg je op RSG 't Rijks een Topsport Talentstatus met de daarbij behorende faciliteiten.
                             </p>
