content toegevoegd, crossbrowser debugged IE

--- a/Website/Basis Website [SBR Viewer]/maatwerk_en_breedtesport.html
+++ b/Website/Basis Website [SBR Viewer]/maatwerk_en_breedtesport.html
@@ -68,10 +68,10 @@
                     <div class="col-md-2 nav-menu navbar-intern">
                         <ul class="nav navbar-nav">
                             <li class="page-scroll">
-                                <a href="#algemeen">algemeen</a>
+                                <a href="#over">over</a>
                             </li>
                             <li class="page-scroll">
-                                <a href="#schooltournooi">SchoolTournooi</a>
+                                <a href="#schooltournooi">SchoolToernooi</a>
                             </li>
                             <li class="page-scroll">
                                 <a href="#contact">Contact</a>
@@ -105,31 +105,41 @@
     </header>
 
     <main>
-        <section id="algemeen" class="section about">
+        <section id="over" class="section about">
             <div class="section-body">
                 <div class="content">
                     <div class="section-header">
-                        <h2>Algemeen</h2>
+                        <h2>Over</h2>
                         <div class="divider-grey"></div>
                     </div>
                     <div class="section-container">
-                        <div class="container">
-                            <div class="row">
-                                <div class="col-lg-2">
-                                </div>
-                                <div class="col-lg-8">
-                                    <p>
-                                        <span> Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor. Aenean massa. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Donec quam felis, ultricies nec, pellentesque eu, pretium quis, sem. Nulla consequat massa quis enim. Donec pede justo, fringilla vel, aliquet nec, vulputate eget, arcu. In enim justo, rhoncus ut, imperdiet a, venenatis vitae, justo. Nullam dictum felis eu pede mollis pretium. Integer tincidunt. Cras dapibus. Vivamus elementum semper nisi. Aenean vulputate eleifend tellus. Aenean leo ligula, porttitor eu, consequat vitae, eleifend ac, enim. Aliquam lorem ante, dapibus in, viverra quis, feugiat a, tellus. Phasellus viverra nulla ut metus varius laoreet. Quisque rutrum. Aenean imperdiet. Etiam ultricies nisi vel augue. Curabitur ullamcorper ultricies nisi. Nam eget dui.</span>
+                        <div class="row">
+                            <div class="col-lg-8 col-lg-offset-2">
+                                <p class="text-center">
+                                    Ervaren (rugby)trainers, ondersteund door ervaren spelers kunnen indien gewenst activiteiten verzorgen voor een vereniging/organisatie (op locatie), zoals;
+                                </p>
+                                <div class="collapse-group">
+                                    <table class="collapse table">
+                                        <tr>
+                                            <td>Rugbyspecifieke trainingen</td>
+                                        </tr>
+                                        <tr>
+                                            <td>Rugby inzetten als middel om bepaalde doelgroepen een duw in de juiste richting te kunnen geven</td>
+                                        </tr>
+                                        <tr>
+                                            <td>Ondersteuning technisch kader (train de trainer modules) en rugbylessen op school</td>
+                                        </tr>
+                                        <tr>
+                                            <td>U vraagt wij draaien!</td>
+                                        </tr>
+                                    </table>
+
+                                    <p class="collapse text-center">
+                                        Ook kunnen specifieke onderwerpen aan bod komen: u kunt kiezen uit technische onderwerpen, maar ook ondersteuning bij het opzetten van een jeugdopleiding/technischplan behoort tot de mogelijkheden. 
                                     </p>
-                                    <div class="collapse-group">
-                                        <p class="collapse">
-                                            <span> Etiam rhoncus. Maecenas tempus, tellus eget condimentum rhoncus, sem quam semper libero, sit amet adipiscing sem neque sed ipsum. Nam quam nunc, blandit vel, luctus pulvinar, hendrerit id, lorem. Maecenas nec odio et ante tincidunt tempus. Donec vitae sapien ut libero venenatis faucibus. Nullam quis ante. Etiam sit amet orci eget eros faucibus tincidunt. Duis leo. Sed fringilla mauris sit amet nibh. Donec sodales sagittis magna. Sed consequat, leo eget bibendum sodales, augue velit cursus nunc, quis gravida magna mi a libero. Fusce vulputate eleifend sapien. Vestibulum purus quam, scelerisque ut, mollis sed, nonummy id, metus. Nullam accumsan lorem in dui. Cras ultricies mi eu turpis hendrerit fringilla. Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia Curae; In ac dui quis mi consectetuer lacinia.</span>
-                                        </p>
-                                        <a class="btn btn-default btn-collapse" href="#">
-                                            <span>lees meer</span>
-                                        </a>
-                                        <p></p>
-                                    </div>
+                                    <a class="btn btn-default btn-collapse" href="#">
+                                        <span>Meer info</span>
+                                    </a>
                                 </div>
                             </div>
                         </div>
@@ -145,22 +155,21 @@
                         <div class="divider-grey"></div>
                     </div>
                     <div class="section-container">
-                        <div class="container">
-                            <div class="row">
-                                <div class="col-lg-2">
-                                </div>
-                                <div class="col-lg-8">
-                                    <p>
-                                        Rugby is een geschikte sport om op school te geven. Rugby is een combinatie van snelheid, kracht, techniek en tactiek, maar heeft ook respect hoog in het vaandel staan: deelnemers leren over weerbaarheid, veiligheid, samenwerken en leren respect te hebben voor elkaar. Daarnaast helpt sporten in het algemeen bij de motorische, sociale en cognitieve ontwikkeling van kinderen.>
+                        <div class="row">
+                            <div class="col-lg-2">
+                            </div>
+                            <div class="col-lg-8">
+                            <p class="text-center">
+                                    Rugby is een geschikte sport om op school te geven. Rugby is een combinatie van snelheid, kracht, techniek en tactiek, maar heeft ook respect hoog in het vaandel staan: deelnemers leren over weerbaarheid, veiligheid, samenwerken en leren respect te hebben voor elkaar. Daarnaast helpt sporten in het algemeen bij de motorische, sociale en cognitieve ontwikkeling van kinderen.
+                                </p>
+                                <div class="collapse-group">
+                                    <p class="collapse text-center">
+                                        Jaarlijks ondersteunt ZeBra het Regionaal  Scholen Rugby Toernooi dat plaats bij RC.RCC BEKARO op sportpark Vierhoeven in Roosendaal. Dit toernooi is opgezet voor leerlingen van het voortgezet onderwijs in drie groepen: U 14 gemengd (jongens en meisjes), U16 meisjes en U16 jongens. In aanloop naar het toernooi verzorgt ZeBra in samenwerking met RCC Bekaro voor elke school een aantal clinics. Alle teams komen hierdoor goed voorbereid aan de start.
                                     </p>
-                                    <div class="collapse-group">
-                                        <p class="collapse">
-                                            Jaarlijks ondersteunt ZeBra het Regionaal  Scholen Rugby Toernooi dat plaats bij RC.RCC BEKARO op sportpark Vierhoeven in Roosendaal. Dit toernooi is opgezet voor leerlingen van het voortgezet onderwijs in drie groepen: U 14 gemengd (jongens en meisjes), U16 meisjes en U16 jongens. In aanloop naar het toernooi verzorgt ZeBra in samenwerking met RCC Bekaro voor elke school een aantal clinics. Alle teams komen hierdoor goed voorbereid aan de start.
-                                        </p>
-                                        <a class="btn btn-default btn-collapse" href="#">
-                                            <span>Meer info</span>
-                                        </a>
-                                    </div>
+                                    <iframe src="https://www.youtube.com/embed/Cgus55p-1u4" frameborder="0" allowfullscreen class="collapse"></iframe>
+                                    <a class="btn btn-default btn-collapse" href="#">
+                                        <span>lees meer</span>
+                                    </a>
                                 </div>
                             </div>
                         </div>
