--- a/Website/Basis Website [SBR Viewer]/selecties.html
+++ b/Website/Basis Website [SBR Viewer]/selecties.html
@@ -156,7 +156,7 @@
                     <div class="col-lg-8 col-lg-offset-2">
                         <table class="table">
                             <tr>
-                                <th class="info" colspan="2">Begeleiding</th>
+                                <th class="info-green" colspan="2">Begeleiding</th>
                             </tr>
                             <tr>
                                 <td>Hoofdcoach</td>
@@ -197,7 +197,7 @@
                     <div class="col-lg-8 col-lg-offset-2">
                         <table class="table">
                             <tr>
-                                <th class="info" colspan="2">Begeleiding</th>
+                                <th class="info-green" colspan="2">Begeleiding</th>
                             </tr>
                             <tr>
                                 <td>Hoofdcoach</td>
@@ -238,7 +238,7 @@
                     <div class="col-lg-8 col-lg-offset-2">
                         <table class="table">
                             <tr>
-                                <th class="info" colspan="2">Begeleiding</th>
+                                <th class="info-green" colspan="2">Begeleiding</th>
                             </tr>
                             <tr>
                                 <td>Hoofdcoach</td>
@@ -279,7 +279,7 @@
                     <div class="col-lg-8 col-lg-offset-2">
                         <table class="table">
                             <tr>
-                                <th class="info" colspan="2">Begeleiding</th>
+                                <th class="info-green" colspan="2">Begeleiding</th>
                             </tr>
                             <tr>
                                 <td>Hoofdcoach</td>
@@ -320,7 +320,7 @@
                     <div class="col-lg-8 col-lg-offset-2">
                         <table class="table">
                             <tr>
-                                <th class="info" colspan="2">Begeleiding</th>
+                                <th class="info-green" colspan="2">Begeleiding</th>
                             </tr>
                             <tr>
                                 <td>Hoofdcoach</td>
