--- a/Website/Basis Website [SBR Viewer]/index.html
+++ b/Website/Basis Website [SBR Viewer]/index.html
@@ -27,7 +27,7 @@
 
 <body id="page-top" data-spy="scroll" data-target=".navbar-custom">
     <header>
-        <nav class="navbar navbar-custom navbar-fixed-top" role="navigation">
+        <nav class="navbar navbar-custom navbar-fixed-top top-nav-collapse" role="navigation">
             <div class="container">
                 <div class="row">
                     
@@ -63,7 +63,7 @@
             </div>
         </nav>
 
-        <nav class="navbar navbar-custom navbar-intern">
+        <nav class="navbar navbar-custom navbar-intern top-nav-collapse">
             <div class="row">
                 <div class="col-md-2 nav-menu navbar-intern">
                     <ul class="nav navbar-nav">
@@ -120,21 +120,19 @@
                         <div class="divider-grey"></div>
                     </div>
                     <div class="section-container">
-                        <div class="container">
-                            <div class="row">
-                                <div class="col-lg-2">
-                                    <img src="img/logo_zebra_128.gif" class="profile" alt="Logo Stg Zebra">
-                                </div>
-                                <div class="col-lg-8">
-                                    <p>
-                                        ZeBra is een veelzijdige organisatie met een passie voor rugby. De stichting verzorgt trainingen en begeleiding op maat voor individuele spelers, rugbyverenigingen, onderwijsinstellingen en lokale overheden en richt zich naast de breedtesport ook speciaal op talentherkenning, talentontwikkeling en talentbegeleiding. Naast bijdragen aan het identificeren van talenten worden talenten voorbereid op doorstroom naar de programma's van regionale trainingen en/of nationale selecties van de NRB. 
+                        <div class="row">
+                            <div class="col-lg-2">
+                                <img src="img/logo_zebra_128.gif" class="profile" alt="Logo Stg Zebra">
+                            </div>
+                            <div class="col-lg-8">
+                                <p>
+                                    ZeBra is een veelzijdige organisatie met een passie voor rugby. De stichting verzorgt trainingen en begeleiding op maat voor individuele spelers, rugbyverenigingen, onderwijsinstellingen en lokale overheden en richt zich naast de breedtesport ook speciaal op talentherkenning, talentontwikkeling en talentbegeleiding. Naast bijdragen aan het identificeren van talenten worden talenten voorbereid op doorstroom naar de programma's van regionale trainingen en/of nationale selecties van de NRB. 
+                                </p>
+                                <div class="collapse-group">
+                                    <p class="collapse">
+                                        De omvang, inhoud en kwaliteit van de programma’s bieden uitzicht op succes. ZeBra staat garant voor optimale technische, tactische, fysiek en mentale begeleiding. Wij realiseren een leer- omgeving waarbinnen het meest optimaal de potentie van de deelnemers kan worden ontwikkeld.
                                     </p>
-                                    <div class="collapse-group">
-                                        <p class="collapse">
-                                            De omvang, inhoud en kwaliteit van de programma’s bieden uitzicht op succes. ZeBra staat garant voor optimale technische, tactische, fysiek en mentale begeleiding. Wij realiseren een leer- omgeving waarbinnen het meest optimaal de potentie van de deelnemers kan worden ontwikkeld.
-                                        </p>
-                                        <a class="btn btn-default btn-collapse" href="#">Lees meer</a>
-                                    </div>
+                                    <a class="btn btn-default btn-collapse" href="#">Lees meer</a>
                                 </div>
                             </div>
                         </div>
@@ -142,6 +140,7 @@
                 </div>
             </div>
         </section>
+        
         <section id="nieuws" class="section nieuws">
             <div class="section-body">
                 <div class="content">
@@ -167,11 +166,11 @@
                         </h2>
                         <div class="divider-grey"></div>
 
-                        <div class=" col-lg-8 col-lg-offset-2">
+                        <div class="col-lg-8 col-lg-offset-2">
                             <h3>Programma seizoen 2015 – 2016</h3>
                             <table class="table">
                                 <tr>
-                                    <td class="info" colspan="2"><strong>6 september</strong></td>
+                                    <td class="info-green" colspan="2"><strong>6 september</strong></td>
                                 </tr>
                                     <tr>
                                         <td>09.30 - 13.00</td>
@@ -189,7 +188,7 @@
                                         <td>Wedstrijd ZeBra U 16 en U17 – RCE/PV U16 en U17</td>
                                     </tr>
                                 <tr>
-                                    <td class="info" colspan="2"><strong>8 november</strong></td>
+                                    <td class="info-green" colspan="2"><strong>8 november</strong></td>
                                 </tr>
                                     <tr>
                                         <td>09.30 - 13.00</td>
@@ -207,7 +206,7 @@
                                         <td>Wedstrijd ZeBra U 16 en U17</td>
                                     </tr>
                                 <tr>
-                                    <td class="info" colspan="2"><strong>10 januari</strong></td>
+                                    <td class="info-green" colspan="2"><strong>10 januari</strong></td>
                                 </tr>
                                     <tr>
                                         <td>09.30 - 13.00</td>
@@ -225,14 +224,14 @@
                                         <td>Wedstrijd ZeBra U 16 en U17 </td>
                                     </tr>
                                 <tr>
-                                    <td class="info" colspan="2"><strong>9 april</strong></td>
+                                    <td class="info-green" colspan="2"><strong>9 april</strong></td>
                                 </tr>
                                     <tr>
                                         <td>09.00 - 15.00</td>
                                         <td>RRD 4 in Amsterdam (NRCA) voor U12 t/m U15</td>
                                     </tr>
                                 <tr>
-                                    <td class="info" colspan="2"><strong>15 april</strong></td>
+                                    <td class="info-green" colspan="2"><strong>15 april</strong></td>
                                 </tr>
                                     <tr>
                                         <td>15.00 - 20.00</td>
